--- a/Genre Audio Classification.ipynb
+++ b/Genre Audio Classification.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e5eff94",
+   "id": "325e2dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a68441c1",
+   "id": "de967225",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "08ba94c9",
+   "id": "b4c1b76c",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6d265a25",
+   "id": "747476a3",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "44c2f916",
+   "id": "746b39de",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6588452c",
+   "id": "00ef799a",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b1ea1713",
+   "id": "102de348",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "eb8754ae",
+   "id": "4edecb4f",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db27992",
+   "id": "24d55d4a",
    "metadata": {},
    "source": [
     "## Splitting .wav files into 3"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e0b21c81",
+   "id": "43148ce1",
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2425,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "d3ffb5c2",
+   "id": "baa6d197",
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2517,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "94dbbe5c",
+   "id": "ac0a1fc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "655b4379",
+   "id": "588f8412",
    "metadata": {},
    "outputs": [
     {
@@ -2664,15 +2664,44 @@
     }
    ],
    "source": [
-    "dataframe.sort_values('filename', inplace=True)\n",
+    "dataframe.sort_values('filename')\n",
     "dataframe.reset_index(drop=True, inplace=True)\n",
     "dataframe"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "fb40d1c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'rock'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_class(s):\n",
+    "    \n",
+    "s = 'genres/rock/rock.00096.wav'\n",
+    "\n",
+    "re.search(r'genres/(.*?)/', s).group(1)\n",
+    "\n",
+    "#dataframe['class'] = dataframe['filename']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d0e2eab5",
+   "id": "fcc04fe2",
    "metadata": {},
    "outputs": [],
    "source": []
