orgainze audio data and create spectrograms

--- a/create_spectrograms.ipynb
+++ b/create_spectrograms.ipynb
@@ -49,7 +49,7 @@
     "main_directory = 'mel_spectrograms_3sec/'\n",
     "\n",
     "for g in genres:\n",
-    "    name = top_directory + g\n",
+    "    name = main_directory + g\n",
     "    os.makedirs(name)"
    ]
   },
