organize audio data and create spectrograms

--- a/create_spectrograms.ipynb
+++ b/create_spectrograms.ipynb
@@ -60,7 +60,8 @@
    "outputs": [],
    "source": [
     "#make mel spectrogram for each audio file\n",
-    "#change split_size to determine length of audio file used in spectrogram (661790 is array length of 30 sec audio)\n",
+    "#change split_size to determine length of audio file used in spectrogram (661794 is array length of 30 sec audio)\n",
+    "#chop off the last 4 elements of array for even division into 10 segements\n",
     "\n",
     "\n",
     "for fn, data, sr in zip(df['filename'], df['data'], df['sr']):\n",
